--- a/ui/index.html
+++ b/ui/index.html
@@ -59,9 +59,6 @@
           <p class="subtitle">Local · Private · Cited</p>
         </div>
       </div>
-      <button class="sidebar-collapse-btn" id="sidebarCollapseBtn" title="Collapse sidebar">
-        <i class="fas fa-chevron-left"></i>
-      </button>
     </div>
     
     <button class="new-chat-btn" id="newChatBtn" title="New chat">
@@ -107,6 +104,9 @@
         </div>
       </div>
     </div>
+    <button class="sidebar-collapse-badge" id="sidebarCollapseBtn" title="Collapse sidebar">
+      <i class="fas fa-chevron-left"></i>
+    </button>
   </aside>
 
   <!-- Main Chat Area -->
